xboot: add xboot package support

--- a/boot/Config.in
+++ b/boot/Config.in
@@ -13,5 +13,6 @@ source "boot/mxs-bootlets/Config.in"
 source "boot/syslinux/Config.in"
 source "boot/uboot/Config.in"
 source "boot/xloader/Config.in"
+source "boot/xboot/Config.in"
 
 endmenu
